--- a/index.html
+++ b/index.html
@@ -396,10 +396,10 @@
                         <div class="mt-8">
                             <h4 class="text-lg font-semibold text-darkruby mb-4">Redes Sociais</h4>
                             <div class="flex space-x-4">
-                                <a href="#" class="w-10 h-10 rounded-full bg-accent flex items-center justify-center text-ruby hover:bg-ruby hover:text-white transition duration-300">
+                                <a href="https://www.instagram.com/andressa.rcaetano/" class="w-10 h-10 rounded-full bg-accent flex items-center justify-center text-ruby hover:bg-ruby hover:text-white transition duration-300">
                                     <i class="fab fa-instagram"></i>
                                 </a>
-                                <a href="#" class="w-10 h-10 rounded-full bg-accent flex items-center justify-center text-ruby hover:bg-ruby hover:text-white transition duration-300">
+                                <a href="https://www.linkedin.com/in/andressa-rcaetano/" class="w-10 h-10 rounded-full bg-accent flex items-center justify-center text-ruby hover:bg-ruby hover:text-white transition duration-300">
                                     <i class="fab fa-linkedin-in"></i>
                                 </a>
                             </div>
@@ -530,10 +530,10 @@
                         <li class="flex items-center"><i class="fas fa-envelope text-accent mr-2"></i> <span class="text-accent">contato@caetanoassessoria.com.br</span></li>
                     </ul>
                     <div class="mt-4 flex space-x-4">
-                        <a href="https://www.instagram.com/andressa.rcaetano?igsh=MXJ6NjN4ZTRta2tlaw==" class="w-8 h-8 rounded-full bg-accent flex items-center justify-center text-darkruby hover:bg-primary transition duration-300">
+                        <a href="https://www.instagram.com/andressa.rcaetano/" class="w-8 h-8 rounded-full bg-accent flex items-center justify-center text-darkruby hover:bg-primary transition duration-300">
                             <i class="fab fa-instagram"></i>
                         </a>
-                        <a href="#" class="w-8 h-8 rounded-full bg-accent flex items-center justify-center text-darkruby hover:bg-primary transition duration-300">
+                        <a href="https://www.linkedin.com/in/andressa-rcaetano/" class="w-8 h-8 rounded-full bg-accent flex items-center justify-center text-darkruby hover:bg-primary transition duration-300">
                             <i class="fab fa-linkedin-in"></i>
                         </a>
                     </div>
