--- a/index.html
+++ b/index.html
@@ -41,6 +41,19 @@
                     <a href="#contact" class="nav-link text-gray-700 hover:text-ruby font-medium">Contato</a>
                 </nav>
                 
+                <!-- Botão Mobile -->
+                <button id="mobile-menu-button" class="md:hidden focus:outline-none">
+                    <i class="fas fa-bars text-2xl text-ruby"></i>
+                </button>
+
+                <!-- Menu Mobile -->
+                <nav id="mobile-menu" class="hidden flex-col space-y-4 mt-4">
+                    <a href="#home" class="nav-link text-gray-700 hover:text-ruby font-medium">Início</a>
+                    <a href="#services" class="nav-link text-gray-700 hover:text-ruby font-medium">Serviços</a>
+                    <a href="#about" class="nav-link text-gray-700 hover:text-ruby font-medium">Quem somos</a>
+                    <a href="#contact" class="nav-link text-gray-700 hover:text-ruby font-medium">Contato</a>
+                </nav>
+                
                 <button class="md:hidden focus:outline-none">
                     <i class="fas fa-bars text-2xl text-ruby"></i>
                 </button>
